--- a/app/jfrog-logs/default/savedsearches.conf
+++ b/app/jfrog-logs/default/savedsearches.conf
@@ -1,20 +1,21 @@
+[default]
 [Dockerhub Rolling 6 Hr Window Alert]
-alert.digest_mode = 0
-alert.expires = 365d
-alert.severity = 4
-alert.suppress = 1
-alert.suppress.fields = * "docker-remote downloading" log_source="jfrog.rt.artifactory.service" "manifests/" "docker.io" | spath message | search message !=" docker-remote downloading */manifests/sha256:*"
-alert.suppress.period = 30m
-alert.track = 1
-counttype = number of events
-cron_schedule = * * * * *
-description = Counts the total number of requests made to Dockerhub in a rolling 6 hour window and alerts if they exceed the new rate limits set by Docker.
-dispatch.earliest_time = rt-6h
-dispatch.latest_time = rt-0h
+disabled = 1
 display.page.search.mode = verbose
-enableSched = 1
-quantity = 200
-relation = greater than
 request.ui_dispatch_app = jfrog-logs
+enableSched = 1
+alert.severity = 4
+dispatch.latest_time = rt-0h
+description = Counts the total number of requests made to Dockerhub in a rolling 6 hour window and alerts if they exceed the new rate limits set by Docker.
+search = * "downloading" log_source="jfrog.rt.artifactory.service" "manifests/" "docker.io" | spath message | search message !="downloading */manifests/sha256:*"
+relation = greater than
+alert.digest_mode = 0
+counttype = number of events
+alert.suppress.period = 30m
+cron_schedule = * * * * *
+dispatch.earliest_time = rt-6h
+alert.suppress = 1
+quantity = 200
 request.ui_dispatch_view = search
-search = * "docker-remote downloading" log_source="jfrog.rt.artifactory.service" "manifests/" "docker.io" | spath message | search message !=" docker-remote downloading */manifests/sha256:*"
+alert.track = 1
+alert.suppress.fields = * "downloading" log_source="jfrog.rt.artifactory.service" "manifests/" "docker.io" | spath message | search message !=" docker-remote downloading */manifests/sha256:*"
