Changing index name

--- a/siem/splunk_siem.conf
+++ b/siem/splunk_siem.conf
@@ -36,6 +36,6 @@ category ${record["type"]}
   format json
   sourcetype_key log_source
   use_fluentd_time false
-  index violations
+  index xray_violations
   flush_interval 10s
 </match>
