--- a/siem/splunk_siem.conf
+++ b/siem/splunk_siem.conf
@@ -5,7 +5,7 @@ jpd_url <jpd_url>
 access_token <access_token>
 pos_file "splunk_pos.txt"
 </source>
-<filter test*>
+<filter splunk*>
 @type record_transformer
 enable_ruby true
 <record>
