Formatting conf file

--- a/siem/splunk_siem.conf
+++ b/siem/splunk_siem.conf
@@ -1,15 +1,16 @@
+
 <source>
-@type jfrog_siem
-tag splunk_jfrog
-jpd_url <jpd_url>
-access_token <access_token>
-pos_file "splunk_pos.txt"
+  @type jfrog_siem
+  tag test_tag
+  jpd_url <jpd_url>
+  access_token <access_token>
+  pos_file "splunk_pos.txt"
 </source>
-<filter splunk*>
-@type record_transformer
-enable_ruby true
-<record>
-category ${record["type"]}
+<filter test*>
+  @type record_transformer
+  enable_ruby true
+  <record>
+    category ${record["type"]}
     url ${record["violation_details_url"]}
     signature ${record["watch_name"]}
     cvss ${record["cvss_score"]}
@@ -28,7 +29,7 @@ category ${record["type"]}
   </record>
   remove_keys _type_, _watch_name_, _violation_details_url_, _cvss_score_, _cvss_version_
 </filter>
-<match splunk*>
+<match test*>
   @type splunk_hec
   host HEC_HOST
   port HEC_PORT
