Splunk v0.9.1 with helm

--- a/helm/artifactory-values.yaml
+++ b/helm/artifactory-values.yaml
@@ -46,5 +46,5 @@ artifactory:
 splunk:
   host: splunk.example.com
   port: 8088
-  token: my_splunk_token
+  token: splunk_hec_token
   index: jfrog_splunk
