--- a/helm/artifactory-ha-values.yaml
+++ b/helm/artifactory-ha-values.yaml
@@ -1,7 +1,7 @@
 installerInfo: '{ "productId": "Helm_splunk_artifactory/{{ .Chart.Version }}", "features": [ { "featureId": "ArtifactoryVersion/{{ default .Chart.AppVersion .Values.artifactory.image.version }}" }, { "featureId": "{{ if .Values.postgresql.enabled }}postgresql{{ else }}{{ .Values.database.type }}{{ end }}/0.0.0" }, { "featureId": "Platform/{{ default "kubernetes" .Values.installer.platform }}" },  { "featureId": "Channel/Helm_splunk_artifactory" } ] }'
 artifactory:
   customInitContainersBegin: |
-    - name: "prepare-fluentd-conf-on-persistent-volume"
+    - name: "download-fluentd-conf-on-persistent-volume"
       image: "{{ .Values.initContainerImage }}"
       imagePullPolicy: "{{ .Values.artifactory.image.pullPolicy }}"
       command:
@@ -46,5 +46,5 @@ artifactory:
 splunk:
   host: splunk.example.com
   port: 8088
-  token: my_splunk_token
+  token: splunk_hec_token
   index: jfrog_splunk
