--- a/helm/xray-values.yaml
+++ b/helm/xray-values.yaml
@@ -14,7 +14,7 @@ rabbitmq:
     password: guest
 common:
   customInitContainersBegin: |
-    - name: "prepare-fluentd-conf-on-persistent-volume"
+    - name: "download-fluentd-conf-on-persistent-volume"
       image: "{{ .Values.initContainerImage }}"
       imagePullPolicy: "{{ .Values.imagePullPolicy }}"
       command:
@@ -59,5 +59,5 @@ common:
 splunk:
   host: splunk.example.com
   port: 8088
-  token: my_splunk_token
+  token: splunk_hec_token
   index: jfrog_splunk
