--- a/k8s/splunk.yaml
+++ b/k8s/splunk.yaml
@@ -1,10 +1,68 @@
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: splunk-master-data
+  labels:
+    app: splunk
+    role: splunk_cluster_master
+    tier: management
+spec:
+  accessModes:
+  - ReadWriteOnce
+  resources:
+    requests:
+      storage: 500Gi
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: splunk-master-config
+  labels:
+    app: splunk
+    role: splunk_cluster_master
+    tier: management
+spec:
+  accessModes:
+  - ReadWriteOnce
+  resources:
+    requests:
+      storage: 10Gi
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: splunk-default-config
+data:
+  default.yml: |
+    splunk:
+      opt: /opt
+      home: /opt/splunk
+      user: splunk
+      group: splunk
+      svc_port: 8089
+      s2s_port: 9997
+      http_port: 8000
+      hec:
+        enable: True
+        ssl: False
+        port: 8088
+        token: CHANGEME
+      conf:
+        - key: macros
+          value:
+            directory: /opt/splunk/etc/apps/jfrog-logs/local
+            content:
+              default_index:
+                definition: "index=jfrog_splunk"
+                iseval: 0
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
     app: splunk
   name: splunk
-  namespace: default
 spec:
   replicas: 1
   selector:
@@ -23,11 +81,36 @@ spec:
             - name: SPLUNK_START_ARGS
               value: "--accept-license"
             - name: SPLUNK_PASSWORD
-              value: "password1"
+              value: "CHANGEME"
+            - name: SPLUNK_APPS_URL
+              value: "https://github.com/jfrog/log-analytics-splunk/raw/master/app/jfrog-logs.tar.gz"
           ports:
             -  containerPort: 8000
             -  containerPort: 8088
             -  containerPort: 8089   
+            -  containerPort: 9996
+            -  containerPort: 9997
+          volumeMounts:
+            - name: splunk-master-data
+              mountPath: /opt/splunk/var
+            - name: splunk-master-config
+              mountPath: /opt/splunk/etc
+            - name: splunk-default-config-volume
+              mountPath: "/tmp/defaults"
+              readOnly: true
+      volumes:
+        - name: splunk-master-config
+          persistentVolumeClaim:
+            claimName: splunk-master-config
+        - name: splunk-master-data
+          persistentVolumeClaim:
+            claimName: splunk-master-data
+        - name: splunk-default-config-volume
+          configMap: 
+            name: splunk-default-config
+            items:
+              - key: "default.yml"
+                path: "default.yml"
 ---
 kind: Service
 apiVersion: v1
@@ -51,6 +134,14 @@ spec:
     protocol: TCP
     port: 8089
     targetPort: 8089
+  - name: tcpinput
+    protocol: TCP
+    port: 9996
+    targetPort: 9996
+  - name: forwarder
+    protocol: TCP
+    port: 9997
+    targetPort: 9997
   type: ClusterIP
 ---
 kind: Service
@@ -67,10 +158,6 @@ spec:
     protocol: TCP
     port: 80
     targetPort: 8000
-  - name: hec
-    protocol: TCP
-    port: 8088
-    targetPort: 8088
   - name: api
     protocol: TCP
     port: 8089
