--- a/app/jfrog-logs/default/app.conf
+++ b/app/jfrog-logs/default/app.conf
@@ -2,10 +2,11 @@
 
 [install]
 is_configured = 0
+state_change_requires_restart = true
 
 [launcher]
 author = JFrog
-version = 1.2.0
+version = 1.2.1
 description = This app helps process extracted logs for the JFrog Platform, the universal, hybrid end-to-end DevOps platform.  The app includes a diagnostic dashboard view for JFrog Artifactory. For more information see our blog:  https://jfrog.com/blog/unified-jfrog-log-analytics-with-splunk/
 
 [ui]
