Interim Commit - To support a workstation migration
Interim Commit - To support a workstation migration

--- a/app/jfrog-logs/default/macros.conf
+++ b/app/jfrog-logs/default/macros.conf
@@ -1,3 +1,7 @@
 [default_index]
 definition = index="jfrog_splunk"
 iseval = 0
+
+[default_metrics_index]
+definition = "index"="jfrog_splunk_metrics"
+iseval = 0
