Updates to Sample Data Generator Fluent Config File
Updates to Sample Data Generator Fluent Config File

--- a/fluentd-demo.conf
+++ b/fluentd-demo.conf
@@ -109,14 +109,14 @@
   @id denied_logins1
   tag jfrog.rt.artifactory.access
   rate 5
-  dummy '{"action_response":"DENIED LOGIN","ip":"10.15.1.2","username":"johnp"}'
+  dummy '{"action_response":"DENIED LOGIN","ip":"10.15.1.2","username":"vasuki"}'
 </source>
 <source>
   @type dummy
   @id denied_logins2
   tag jfrog.rt.artifactory.access
   rate 6
-  dummy '{"action_response":"DENIED LOGIN","ip":"51.10.13.22","username":"vinaya"}'
+  dummy '{"action_response":"DENIED LOGIN","ip":"51.10.13.22","username":"karol"}'
 </source>
 <source>
   @type dummy
@@ -181,18 +181,19 @@
 
 <match jfrog.**>
   @type splunk_hec
-    protocol http
-    host HEC_HOST
-    port HEC_PORT
-    token HEC_TOKEN
-    index jfrog_splunk
-    format json
-    sourcetype_key log_source
-    use_fluentd_time false
-    # buffered output parameter
-    flush_interval 10s
-    # ssl parameter
-    #use_ssl true
-    #ca_file /path/to/ca.pem
+  protocol https
+  hec_host HEC_HOST
+  hec_port HEC_PORT
+  hec_token HEC_TOKEN
+  index jfrog_splunk
+  format json
+  sourcetype_key log_source
+  use_fluentd_time false
+  # buffered output parameter
+  flush_interval 10s
+  insecure_ssl false
+  # ssl parameter
+  #use_ssl true
+  #ca_file /path/to/ca.pem
 </match>
 #END SPLUNK OUTPUT
