--- a/helm/jfrog-platform-values.yaml
+++ b/helm/jfrog-platform-values.yaml
@@ -17,7 +17,7 @@ global:
         token: jfrog_token
       branch: master
 
-installerInfo: '{ "productId": "Helm_elastic_artifactory/{{ .Chart.Version }}", "features": [ { "featureId": "ArtifactoryVersion/{{ default .Chart.AppVersion .Values.artifactory.image.version }}" }, { "featureId": "{{ if .Values.postgresql.enabled }}postgresql{{ else }}{{ .Values.database.type }}{{ end }}/0.0.0" }, { "featureId": "Platform/{{ default "kubernetes" .Values.installer.platform }}" },  { "featureId": "Channel/Helm_elastic_artifactory" } ] }'
+installerInfo: '{ "productId": "Helm_splunk_artifactory/{{ .Chart.Version }}", "features": [ { "featureId": "ArtifactoryVersion/{{ default .Chart.AppVersion .Values.artifactory.image.version }}" }, { "featureId": "{{ if .Values.postgresql.enabled }}postgresql{{ else }}{{ .Values.database.type }}{{ end }}/0.0.0" }, { "featureId": "Platform/{{ default "kubernetes" .Values.installer.platform }}" },  { "featureId": "Channel/Helm_splunk_artifactory" } ] }'
 artifactory:
   artifactory:
     openMetrics:
@@ -44,7 +44,7 @@ artifactory:
               -e 's/COMMON_JPD/false/' \
               -e 's/API_KEY/{{ .Values.global.jfrog.observability.metrics.apikey }}/' fluent.tmp.conf;
             mv fluent.tmp.conf fluentd.conf;
-            fluentd -v -c fluentd.conf
+            fluentd --suppress-config-dump -c fluentd.conf 
         volumeMounts:
           - mountPath: "{{ .Values.artifactory.persistence.mountPath }}"
             name: artifactory-volume
@@ -75,9 +75,10 @@ xray:
               -e 's/JFROG_ADMIN_TOKEN/{{ .Values.global.jfrog.observability.metrics.token }}/' \
               -e 's/COMMON_JPD/false/' \
               -e 's/JFROG_API_KEY/{{ .Values.global.jfrog.observability.metrics.apikey }}/' fluent.tmp.conf;  
-            [ `hostname` = "jfrog-platform-xray-0" ] && sed -i -e 's/jfrog_siem/sample/g' fluent.tmp.conf;
+            [ `hostname` != "jfrog-platform-xray-0" ] && sed -i -e 's/jfrog_siem/dummy/g' fluent.tmp.conf;
+            [ `hostname` != "jfrog-platform-xray-0" ] && sed -i -e 's/tag jfrog.xray.siem.vulnerabilities/tag ignored\n suspend true/g' fluent.tmp.conf;
             mv fluent.tmp.conf fluentd.conf;
-            fluentd -v -c fluentd.conf
+            fluentd --suppress-config-dump -c fluentd.conf
         volumeMounts:
           - mountPath: "{{ .Values.xray.persistence.mountPath }}"
             name: data-volume
